<resources>
    <string name="app_name">PosRudyProject</string>
    <string name="todo">TODO</string>
    <string name="title_masuk">MASUK</string>
    <string name="subtitle_pos_rudy_project">POS Rudy Project</string>
    <string name="hint_nama_pengguna">Nama Pengguna</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="btn_lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="btn_masuk">Masuk</string>
    <string name="nav_beranda">Beranda</string>
    <string name="nav_rekap_kas">Rekap Kas</string>
    <string name="nav_keranjang">Keranjang</string>
    <string name="nav_akun">Akun</string>
    <string name="subtitle_toko">Toko</string>
    <string name="title_menu_kategori">Menu Kategori</string>
    <string name="menu_penjualan">Penjualan</string>
    <string name="menu_penyimpanan">Penyimpanan</string>
    <string name="menu_pelanggan">Pelanggan</string>
    <string name="menu_penjual">Penjual</string>
    <string name="menu_produk">Produk</string>
    <string name="menu_laporan">Laporan</string>
    <string name="menu_filter">Filter</string>
    <string name="txt_hint_0">0</string>
    <string name="btn_masuk_keranjang">Masuk Keranjang</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="menu_notes">Notes</string>
    <string name="btn_ubah_harga">Ubah Harga</string>
    <string name="btn_simpan_pesanan">Simpan</string>
    <string name="kali">X</string>
    <string name="sama_dengan">=</string>
    <string name="tv_hapus">Hapus</string>
    <string name="title_ringkasan_keranjang">Ringkasan</string>
    <string name="title_pelanggan">Pelanggan</string>
    <string name="title_penjual">Penjual</string>
    <string name="title_diskon">Diskon</string>
    <string name="title_ongkir">Ongkir</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="rp_0">Rp 0.</string>
    <string name="title_total_harga">Total Harga</string>
    <string name="btn_custom">Custom</string>
    <string name="btn_konfirmasi">Konfirmasi</string>
    <string name="title_filter">Filter</string>
    <string name="subtitle_pilih_tipe">Pilih Tipe</string>
    <string name="title_belum_ada_transaksi">Belum Ada Transaksi</string>
    <string name="pilih_barang_yang_ingin_anda_jual_dan_lakukan_transaksi_anda">Pilih barang yang ingin anda jual dan lakukan transaksi Anda.</string>
    <string name="menu_delete">Delete</string>
    <string name="title_total">Total</string>
    <string name="title_keterangan">Keterangan</string>
    <string name="title_simpan_pesanan">Simpan Pesanan</string>
    <string name="hint_keterangan">Keterangan</string>
    <string name="btn_hapus">Hapus</string>
    <string name="title_ubah_harga">Ubah Harga</string>
    <string name="hint_nominal">Nominal</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="btn_tambah_pelanggan">Tambah Pelanggan</string>
    <string name="et_hint_nama_pelanggan">Nama Pelanggan</string>
    <string name="et_hint_nik_pelanggan">Nik Pelanggan</string>
    <string name="et_hint_no_handphone">No. Handphone</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_alamat">Alamat</string>
    <string name="title_email_pelanggan">Email</string>
    <string name="title_alamat_pelanggan">Alamat</string>
    <string name="title_total_kunjungan">Total Kunjungan</string>
    <string name="title_kunjungan_terakhir">Kunjungan Terakhir</string>
    <string name="title_total_poin">Total Poin</string>
    <string name="btn_pindahkan_penjual">Pindahkan Penjual</string>
    <string name="title_toko_tujuan">Toko Tujuan</string>
    <string name="subtitle_pilih_toko">Pilih Toko</string>
    <string name="btn_oke">Oke</string>
    <string name="title_tambah_diskon">Tambah Diskon</string>
    <string name="et_hint_jumlah_persen">Jumlah <i>(%)</i></string>
    <string name="et_hint_jumlah_rupiah">Jumlah <i>(Rp)</i></string>
    <string name="et_hint_deskripsi">Deskripsi <i>(Optional)</i></string>
    <string name="btn_batal">Batal</string>
    <string name="btn_tambah">Tambah</string>
    <string name="title_ongkos_kirim">Ongkos Kirim</string>
    <string name="et_hint_nama_ekspedisi">Nama Ekspedisi</string>
    <string name="et_hint_ongkos_kirim">Ongkos Kirim</string>
    <string name="title_kembalian">Kembalian :</string>
    <string name="btn_uang_pas">Uang Pas</string>
    <string name="title_uang_diterima">Uang Diterima</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_clear">C</string>
    <string name="btn_0">0</string>
    <string name="btn_00">00</string>
    <string name="btn_lanjut">Lanjut</string>
    <string name="title_kartu_debit">Kartu Debit</string>
    <string name="title_kartu_kredit">Kartu Kredit</string>
    <string name="title_transfer_bank">Transfer Bank</string>
    <string name="title_activity_transaksi_sukses">TransaksiSuksesActivity</string>
    <string name="title_transaksi_selesai">Transaksi Sukses!</string>
    <string name="title_jumlah">Jumlah</string>
    <string name="title_detail_pesanan">Detail Pesanan</string>
    <string name="title_total_kembalian">Kembalian</string>
    <string name="title_poin">Poin</string>
    <string name="btn_cetak_struk">Cetak Struk</string>
    <string name="btn_buat_pesanan_baru">Buat Pesanan Baru</string>
    <string name="title_metode_pembayaran">Metode Pembayaran :</string>
    <string name="menu_print">Print</string>
    <string name="title_telp_struk">Telp :</string>
    <string name="title_penjual_struk">Penjual :</string>
    <string name="title_harga_subtotal_struk">Harga Subtotal</string>
    <string name="title_no_struk">No. Struk :</string>
    <string name="title_dibayar_struk">Dibayar</string>
    <string name="title_kembalian_struk">Kembalian</string>
    <string name="terima_kasih_sudah_belanja">Terima kasih sudah belanja!</string>
    <string name="kami_mengirimkan_struk_ini_atas_permintaan_anda_dan_berikut_ini_daftar_barang_berlanjaan_anda">Kami mengirimkan struk ini atas permintaan anda dan berikut ini daftar barang berlanjaan Anda:</string>
    <string name="btn_pemindahan_barang">Pemindahan Barang</string>
    <string name="barang">Barang</string>
    <string name="title_persediaan_stok">Persediaan Stok</string>
    <string name="alert_stok_tinggal_sedikit">Stok Tinggal Sedikit</string>
    <string name="tidak_ada_barang_masuk">Tidak Ada Barang Masuk</string>
    <string name="pilih_rentang_waktu_yang_lain_atau_lakukan_transaksi">Pilih rentang waktu yang lain atau lakukan transaksi</string>
    <string name="title_tanggal_jam">Tanggal/Jam</string>
    <string name="title_stok">Stok</string>
    <string name="status_masuk">Masuk</string>
    <string name="coba_lakukan_transaksi_dulu_ya">Coba lakukan transaksi dulu, ya.</string>
    <string name="tidak_ada_barang_keluar">Tidak Ada Barang Keluar</string>
    <string name="status_keluar">Keluar</string>
    <string name="title_dokumen_pemindahan_barang">Dokumen Pemindahan Barang</string>
    <string name="status_pindah">Pindah</string>
    <string name="title_jumlah_barang">Jumlah Barang</string>
    <string name="tidak_ada_pemindahan_barang">Tidak Ada Pemindahan Barang</string>
    <string name="title_no_dokumen">No. Dokumen</string>
    <string name="title_tanggal_pemindahan">Tanggal Pemindahan</string>
    <string name="title_nama_penjual">Nama Penjual</string>
    <string name="title_catatan">Catatan</string>
    <string name="title_detail_barang">Detail Barang</string>
    <string name="tidak_ada_barang">Tidak Ada Barang</string>
    <string name="title_kuantitas">Kuantitas</string>
    <string name="menu_notifikasi">Notifikasi</string>
    <string name="menu_ubah_akun">Ubah Akun</string>
    <string name="menu_riwayat_transaksi">Riwayat Transaksi</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_bantuan">Bantuan</string>
    <string name="menu_kebijakan_pribadi">Kebijakan Pribadi</string>
    <string name="menu_syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="title_no_invoice">No. Invoice</string>
    <string name="title_tipe_pembayaran">Tipe Pembayaran</string>
    <string name="title_tanggal_transaksi">Tanggal Transaksi</string>
    <string name="title_nama_pelanggan">Nama Pelanggan</string>
    <string name="title_detail_penjualan">Detail Penjualan</string>
    <string name="title_dibayar">Dibayar</string>
    <string name="btn_penukaran_barang">Penukaran Barang</string>
    <string name="push_notification">Push Notification</string>
    <string name="title_perangkat_tambahan">Perangkat Tambahan</string>
    <string name="setting_printer">Printer</string>
    <string name="tv_printer_belum_terhubung">Belum Terhubung</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_mingguan">Se-Minggu</string>
    <string name="status_bulanan">Se-Bulan</string>
    <string name="status_tahunan">Se-Tahun</string>
    <string name="title_total_pendapatan">Total Pendapatan</string>
    <string name="btn_uang_masuk">Uang Masuk</string>
    <string name="btn_uang_keluar">Uang Keluar</string>
    <string name="title_uang_masuk">Uang Masuk</string>
    <string name="hint_jumlah_uang_masuk">Jumlah Uang Masuk</string>
    <string name="hint_catatan">Catatan</string>
    <string name="title_uang_keluar">Uang Keluar</string>
    <string name="hint_jumlah_uang_keluar">Jumlah Uang Keluar</string>
    <string name="btn_tutup_kasir">Tutup Kasir</string>
    <string name="title_keterangan_item">Keterangan :</string>
    <string name="title_waktu">Waktu</string>
    <string name="title_catatan_item">Catatan :</string>
    <string name="title_kas_keluar">Kas Keluar</string>
    <string name="title_kas_masuk">Kas Masuk</string>
    <string name="title_penerimaan_di_kasir">Penerimaan di Kasir</string>
<string name="conn">Search and connect bluetooth printer</string>
	<string name="scan_device">Scanning device</string>
	<string name="ChinesEncode">Chinese</string>
	<string name="JapaneseEncode">Japanese</string>
	<string name="KoreanEncode">Korean</string>
	<string name="EnglishEncode">English</string>
	<string name="ThaiEncode">Thai</string>
	<string name="RusEncode">Russian</string>
	<string name="OtherEncode">Other lang</string>
	<string name="Encode">Select Encode</string>
	<string name="font_size">Select Font Size</string>
	<string name="size_normal">Normal size</string>
	<string name="size_w">Double width</string>
	<string name="size_h">Double height</string>
	<string name="size_double">Double size</string>
	<string name="paired_device">Paired device</string>
	<string name="searched_device">Other useful device</string>
	<string name="paper_size">Select Paper Size</string>
	<string name="hint_input">Please input to the content of the print</string>
	<string name="paper1">50mm*20mm</string>
	<string name="paper2">30mm*20mm</string>
	<string name="paper3">PAPER3</string>
	<string name="normal_mode">Normal mode</string>
	<string name="print_text">Text</string>
	<string name="barcode">Barcode</string>
	<string name="ticket">Ticket</string>
	<string name="text_as_pic">Text as pic</string>
	<string name="barcode_all">BarCode all</string>
	<string name="picture">Picture</string>
	<string name="file">File</string>
	<string name="photo">Photo</string>
	<string name="money_box">Money box</string>
	<string name="debug">Debug</string>
	<string name="label_mode">Label mode</string>
	<string name="label">Label</string>
	<string name="bar_label_multiple">Barcode label multiple</string>
	<string name="qr_label_multiple">QRCode label multiple</string>
	<string name="label_to_tear">Label to tear</string>
</resources>