<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context=".ui.printer.PrinterActivity">

    <Button
        android:id="@+id/btn_reconn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="5dp"
        android:text="@string/conn"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input"
        android:lines="3"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:text="@string/Encode"
                android:textColor="@android:color/white"/>

            <com.example.posrudyproject.ui.printer.FlowRadioGroup
                android:id="@+id/rg_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/RbChinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ChinesEncode"/>

                <RadioButton
                    android:id="@+id/RbJapanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/JapaneseEncode"/>

                <RadioButton
                    android:id="@+id/RbKorean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KoreanEncode"/>

                <RadioButton
                    android:id="@+id/RbEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EnglishEncode"/>

                <RadioButton
                    android:id="@+id/RbThai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ThaiEncode"/>

                <RadioButton
                    android:id="@+id/RbRussia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RusEncode"/>

                <RadioButton
                    android:id="@+id/RbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OtherEncode"/>
            </com.example.posrudyproject.ui.printer.FlowRadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:text="@string/font_size"
                android:textColor="@android:color/white"/>

            <com.example.posrudyproject.ui.printer.FlowRadioGroup
                android:id="@+id/rg_font_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/size_normal"/>

                <RadioButton
                    android:id="@+id/rb_double_w"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_w"/>

                <RadioButton
                    android:id="@+id/rb_double_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_h"/>

                <RadioButton
                    android:id="@+id/rb_double"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_double"/>

            </com.example.posrudyproject.ui.printer.FlowRadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:text="@string/paper_size"
                android:textColor="@android:color/white"/>

            <com.example.posrudyproject.ui.printer.FlowRadioGroup
                android:id="@+id/rg_paper_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_paper1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/paper1"/>

                <RadioButton
                    android:id="@+id/rb_paper2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paper2"/>

                <RadioButton
                    android:id="@+id/rb_paper3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paper3"
                    android:visibility="gone"/>

            </com.example.posrudyproject.ui.printer.FlowRadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="#ccc"
                android:text="@string/normal_mode"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_print"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_text"/>

                <Button
                    android:id="@+id/bt_text_as_pic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_as_pic"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_barcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcode"/>

                <Button
                    android:id="@+id/bt_barcode_all"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/barcode_all"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_ticket"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ticket"/>

                <Button
                    android:id="@+id/bt_pic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/picture"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_file"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file"/>

                <Button
                    android:id="@+id/bt_photo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photo"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_box"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/money_box"/>

                <Button
                    android:id="@+id/bt_debug"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/debug"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="#ccc"
                android:text="@string/label_mode"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label"/>

                <Button
                    android:id="@+id/bt_label_tear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_to_tear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_bar_label_multi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bar_label_multiple"/>

                <Button
                    android:id="@+id/bt_qr_label_multi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qr_label_multiple"/>

            </LinearLayout>


            <ImageView
                android:id="@+id/iv_test"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>