<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_beranda"
        android:checked="true"
        android:icon="@drawable/ic_home_nav"
        android:title="@string/nav_beranda"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/nav_rekap_kas"
        android:icon="@drawable/ic_chart_nav"
        android:title="@string/nav_rekap_kas"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_barcode"
        android:title=""/>

    <item
        android:id="@+id/nav_keranjang"
        android:icon="@drawable/ic_cart_nav"
        android:title="@string/nav_keranjang"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_akun"
        android:icon="@drawable/ic_account_nav"
        android:title="@string/nav_akun"
        app:showAsAction="ifRoom"/>

</menu>