<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc"
        android:text="@string/paired_device"
        android:textColor="@android:color/white"/>

    <ListView
        android:id="@+id/list_paired"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:minHeight="200dp"
        android:stackFromBottom="true"/>

    <Button
        android:text="@string/scan_device"
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc"
        android:text="@string/searched_device"
        android:textColor="@android:color/white"/>

    <ListView
        android:id="@+id/list_searched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"/>
</LinearLayout>