<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_md"
    tools:context=".ui.login.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_rp_black"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:src="@drawable/im_logo_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_masuk"
        android:fontFamily="@font/work_sans_bold"
        android:textSize="@dimen/font_xxxlg"
        android:textColor="@color/black_gunmetal"
        app:layout_constraintTop_toBottomOf="@id/logo_rp_black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_rp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_regular"
        android:text="@string/subtitle_pos_rudy_project"
        android:textColor="@color/sonic_silver"
        android:textSize="@dimen/font_sm"
        app:layout_constraintTop_toBottomOf="@id/title_masuk"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_et_nama_pengguna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_lg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/title_rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama_pengguna_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama_pengguna"
            android:imeOptions="actionDone"
            android:inputType="textAutoCorrect"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_md"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/toggle_visibility"
        app:passwordToggleTint="@color/neon_blue_primary"
        app:layout_constraintTop_toBottomOf="@id/layout_et_nama_pengguna">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_kata_sandi_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_kata_sandi"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lupa_sandi"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_md"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/btn_lupa_kata_sandi"
        android:textAllCaps="false"
        android:textColor="@color/davys_grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_masuk"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        style="@style/TextAppearance.AppCompat.Button"
        android:layout_marginTop="20dp"
        android:text="@string/btn_masuk"
        android:textSize="@dimen/font_md"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/work_sans_semi_bold"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>