<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    tools:context=".ui.filter.fragment.BotSheetFilterTipeFragment">

    <View
        android:layout_width="63dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_md"
        android:background="@drawable/toggle_botsheet" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/title_filter"
            android:textColor="@color/black"
            android:textSize="@dimen/font_mds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subtitle_filter"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/work_sans_semi_bold"
            android:text="@string/subtitle_pilih_tipe"
            android:textColor="@color/black"
            android:textSize="@dimen/font_xlg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_filter"/>

        <ImageButton
            android:id="@+id/btn_close_botsheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_close_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginEnd="@dimen/margin_md"
        android:layout_marginBottom="@dimen/margin_md"
        android:background="@color/line"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tipe_botsheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</androidx.appcompat.widget.LinearLayoutCompat>